--- a/static/hello.html
+++ b/static/hello.html
@@ -7,5 +7,26 @@
 </head>
 <body>
     <h1>Hello, Server from C code</h1>
+    <form action="http://192.168.1.8:3000" method="POST">
+        <h1>POST REQUEST</h1>
+        <label for="name">Name: </label>
+        <input type="text" name="name" required/>
+
+        <label for="password">Pass: </label>
+        <input type="password" name="password" required/>
+        
+        <button type="submit">submit</button>
+    </form>
+
+    <form action="http://192.168.1.8:3000" method="GET">
+        <h1>GET REQUEST</h1>
+        <label for="name">Name: </label>
+        <input type="text" name="name" required/>
+
+        <label for="password">Pass: </label>
+        <input type="password" name="password" required/>
+        
+        <button type="submit">submit</button>
+    </form>
 </body>
 </html>
