Creating routes and icon for the app

--- a/static/hello.html
+++ b/static/hello.html
@@ -6,6 +6,7 @@
     <title>C Server app</title>
 </head>
 <body>
+    <a href="http://192.168.1.8:3000/link.html">link to link</a>
     <h1>Hello, Server from C code</h1>
     <form action="http://192.168.1.8:3000" method="POST">
         <h1>POST REQUEST</h1>
